fix: chart has horizontal scrollbar

--- a/samples/angular/src/app/app.component.less
+++ b/samples/angular/src/app/app.component.less
@@ -28,7 +28,7 @@ body, #root, .container {
 
 .chart-container {
     display: flex;
-    width: 100%;
+    width: calc(100% - 220px);
     padding: 20px;
 }
 
